<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->


    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:key="@string/pref_resolution"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/resolution" />

    <ListPreference
        android:key="@string/pref_framerate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/framerate"
        android:entries="@array/framerate"
        android:entryValues="@array/framerate"
        android:defaultValue="10" />

    <ListPreference
        android:key="@string/pref_bitrate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/bitrate"
        android:entries="@array/bitrate"
        android:entryValues="@array/bitrate"
        android:defaultValue="10000000" />

    <CheckBoxPreference
        android:key="@string/pref_white_balance"
        android:title="@string/white_balance"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/pref_autofocus"
        android:title="@string/autofocus"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="@string/pref_antibanding"
        android:title="@string/antibanding"
        android:defaultValue="true"/>

</PreferenceScreen>