<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <EditTextPreference
        android:key="@string/pref_driverid"
        android:title="@string/driver_id"
        android:inputType="number"
        android:maxLength="8" />

    <CheckBoxPreference
        android:key="@string/pref_promptdriverid"
        android:title="@string/prompt_driver_id_on_startup"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="@string/pref_camera_switch"
        android:title="Turn Camera Off"
        android:defaultValue="false"/>
Here
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_storage_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_storage_location" />




</PreferenceScreen>
